<resources>
    <string name="app_name">Veryable Coding Challenge</string>
    <string name="welcome_to_veryable_coding_challenge">Welcome To Veryable Coding Challenge</string>

    <!-- Toolbar -->
    <string name="accounts">Accounts</string>
    <string name="details">Details</string>

    <!-- Payouts List Activity -->
    <string name="bank_accounts">Bank Accounts</string>
    <string name="cards">Cards</string>
    <string name="ach_same_day">Bank Account: ACH - Same Day</string>
    <string name="card_instant">Card: Instant</string>
    <string name="delivery">Delivery</string>


    <!-- Payouts Detail Activity -->
    <string name="account_name">Account Name</string>
    <string name="bank_name">Bank Name</string>
    <string name="done">Done</string>

    <!-- Intent Purpose Keys -->
    <string name="account_name_key">Name</string>
    <string name="bank_name_key">Desc</string>
</resources>