<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.PayoutsDetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:elevation="0dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/GlobalToolbar">
                </com.google.android.material.appbar.MaterialToolbar>

                <TextView
                    android:layout_centerInParent="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/details"
                    android:textSize="@dimen/_16sdp"
                    android:textAllCaps="true"
                    android:textColor="@color/dark_grey"/>

            </RelativeLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_2sdp"
            android:background="@color/light_grey" />

        <ImageView
            android:id="@+id/bank_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/_16sdp"
            android:src="@drawable/bank_icon_black"
            app:tint="@color/blue" />

        <TextView
            android:id="@+id/account_name_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_regular"
            android:layout_gravity="center_horizontal"
            android:text="@string/account_name"
            android:textColor="@color/dark_grey"
            android:textSize="@dimen/_16sdp"/>

        <TextView
            android:id="@+id/bank_name_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_regular"
            android:layout_gravity="center_horizontal"
            android:text="@string/bank_name"
            android:textColor="@color/dark_grey"
            android:textSize="@dimen/_14sdp"/>

        <Button
            android:id="@+id/done_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_bg"
            android:elevation="@dimen/_10sdp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/done"
            android:textColor="@color/white"
            android:layout_marginStart="@dimen/_26sdp"
            android:layout_marginTop="@dimen/_300sdp"
            android:layout_marginEnd="@dimen/_26sdp"
            android:layout_marginBottom="@dimen/_18sdp"/>

    </LinearLayout>

</layout>