<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:id="@+id/item_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/_14sdp">

            <ImageView
                android:id="@+id/item_icon"
                android:layout_width="@dimen/_22sdp"
                android:layout_height="@dimen/_22sdp"
                android:src="@drawable/bank_icon_black"
                app:tint="@color/blue" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_14sdp"
                android:layout_marginEnd="@dimen/_14sdp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/item_title_textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/account_name"
                    android:textColor="@color/dark_grey"
                    android:textSize="@dimen/_14sdp"/>

                <TextView
                    android:id="@+id/item_desc_textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/bank_name"
                    android:textColor="@color/dark_grey"
                    android:textSize="@dimen/_12sdp"/>

                <TextView
                    android:id="@+id/item_desc_delivery_textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/delivery"
                    android:textColor="@color/dim_grey"
                    android:textSize="@dimen/_12sdp"/>

            </LinearLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/arrow_right_icon"
                app:tint="@color/dim_grey" />

        </LinearLayout>

    </LinearLayout>

</layout>